--- a/contact_us.section-visit_us.partial.html
+++ b/contact_us.section-visit_us.partial.html
@@ -13,7 +13,9 @@
           Tasting Сonditions
         </p>
         <p class="section-contact-us-visit-us__text">
-          Find out more about the possibilities of visiting our winery.
+          <span
+            >Find out more about the possibilities of visiting our winery.</span
+          >
         </p>
         <p class="section-contact-us-visit-us__text">
           require visitors to be of legal drinking age and to follow the
@@ -25,17 +27,23 @@
             src="img/img_contact_us.section-visit_us/pdf.svg"
             alt="PDF file"
           />
-          <p class="section-contact-us-visit-us_doc">Terms&Conditions</p>
+          <p class="section-contact-us-visit-us_doc">
+            <em><u>Terms&Conditions</u></em>
+          </p>
           <img
             src="img/img_contact_us.section-visit_us/pdf.svg"
             alt="PDF file"
           />
-          <p class="section-contact-us-visit-us_doc">Privacy Policy</p>
+          <p class="section-contact-us-visit-us_doc">
+            <em><u>Privacy Policy</u></em>
+          </p>
           <img
             src="img/img_contact_us.section-visit_us/pdf.svg"
             alt="PDF file"
           />
-          <p class="section-contact-us-visit-us_doc">Legal Information</p>
+          <p class="section-contact-us-visit-us_doc">
+            <em><u>Legal Information</u></em>
+          </p>
         </div>
         <p class="section-contact-us-visit-us__text">
           All guests should dress appropriately and refrain from wearing strong
@@ -56,15 +64,14 @@
           <input type="tel" required name="phonenumber" />
           <input type="email" required name="email" />
           <input type="text" name="message" />
-          <input type="submit" value="Submit" />
+          <input type="submit" value="Send" />
         </form>
         <p class="section-contact-us-visit-us__text">
           It is strongly recommended that you book in advance if you wish to
           attend a wine tasting event. This ensures that you have a place booked
           and means that the event organizers can plan accordingly. Booking in
           advance also means that you can take advantage of any
-          <!--discounts or
-          special offers -->
+          <u>discounts or special offers</u>
           that may be available. Our wine tasting events are in high demand and
           it is important to ensure that you are able to attend by booking your
           place in advance.
@@ -86,13 +93,15 @@
             src="img/img_contact_us.section-visit_us/glass.svg"
             alt="Glass"
           />
-          <p class="section-contact-us-visit-us__description">Delicious wine</p>
+          <p class="section-contact-us-visit-us__description">
+            <em>Delicious wine</em>
+          </p>
           <p class="section-contact-us-visit-us__description">
             Enjoy the taste of our selected wines.
           </p>
           <img src="img/img_contact_us.section-visit_us/jug.svg" alt="Jug" />
           <p class="section-contact-us-visit-us__description">
-            History of winemaking
+            <em>History of winemaking</em>
           </p>
           <p class="section-contact-us-visit-us__description">
             Learn more about winemaking processes.
