--- a/index.section-about-us.partial.html
+++ b/index.section-about-us.partial.html
@@ -11,7 +11,7 @@
         <div class="section-about-us__content">
           <h2 class="section-about-us__title">~ ABOUT US ~</h2>
           <p class="section-about-us__description">
-            Wine is Poetry in a Bottle. Discover Our Wines.
+            Wine is Poetry in a Bottle. Discover Our <em>Wines</em>.
           </p>
           <p class="section-about-us__text">
             Our artisan winery located in Austin, Texas is committed to
@@ -22,20 +22,21 @@
           </p>
         </div>
         <div class="section-about-us__info">
-          <p class="section-about-us__fact">15.000</p>
+          <p class="section-about-us__fact"><em>15.000</p></em>
           <p class="section-about-us__fact-label">Hectares of land;</p>
-          <p class="section-about-us__fact">897+</p>
+          <p class="section-about-us__fact"><em>897+</p></em>
           <p class="section-about-us__fact-label">Employees;</p>
-          <p class="section-about-us__fact">1.500K</p>
+          <p class="section-about-us__fact"><em>1.500K</p></em>
           <p class="section-about-us__fact-label">Bottles produced;</p>
-          <p class="section-about-us__fact">345 +</p>
+          <p class="section-about-us__fact"><em>345 +</p></em>
           <p class="section-about-us__fact-label">Tours per year;</p>
-          <p class="section-about-us__fact">9.000K</p>
+          <p class="section-about-us__fact"><em>9.000K</p></em>
           <p class="section-about-us__fact-label">Visitors per year.</p>
         </div>
       </div>
       <div class="section-about-us__video">
         <img
+        width="500"
           src="img/img_section_about_us/video-presentation.jpg"
           alt="Video Presentation"
         />
