--- a/index.section-gourman-choice.partial.html
+++ b/index.section-gourman-choice.partial.html
@@ -10,11 +10,13 @@
       <div class="section-gourmand-choice__container">
         <h2 class="section-gourmand-choice__title">~ GOURMAND CHOICE ~</h2>
         <p class="section-gourmand-choice__description">
-          Experience the Luxury of Wines Aged Since 1999.
+          Experience the Luxury of <em>Wines</em> Aged Since <em>1999</em>.
         </p>
         <p class="section-gourmand-choice__text">
-          Have a sip of our vintage wines. Sign up for a tasting or order
-          delivery.
+          <span>
+            Have a sip of our vintage wines. Sign up for a tasting or order
+            delivery.
+          </span>
         </p>
         <p class="section-gourmand-choice__text">
           From the dry and mineral whites to the robust and complex reds, the
@@ -36,13 +38,14 @@
             />
             <h3 class="section-gourmand-choice__roller-slide-title">EISWEIN</h3>
             <p class="section-gourmand-choice__roller-slide-description">
-              Dessert wine
+              <em>Dessert wine</em>
             </p>
           </div>
         </article>
         <article class="section-gourmand-choice__roller-slides">
           <div class="section-gourmand-choice__roller-slide">
             <img
+              width="300"
               src="img/img_section_gourman_choise/grenache-rose-wine.png"
               alt="Grenache rose wine"
             />
@@ -50,13 +53,14 @@
               GRENACHE ROSE
             </h3>
             <p class="section-gourmand-choice__roller-slide-description">
-              Vintage wine(2000)
+              <em>Vintage wine(2000)</em>
             </p>
           </div>
         </article>
         <article class="section-gourmand-choice__roller-slides">
           <div class="section-gourmand-choice__roller-slide">
             <img
+              width="300"
               src="img/img_section_gourman_choise/pinot-noir-wine.png"
               alt="Pinot noir wine"
             />
@@ -64,13 +68,14 @@
               PINOT NOIR
             </h3>
             <p class="section-gourmand-choice__roller-slide-description">
-              Vintage wine(1999)
+              <em>Vintage wine(1999)</em>
             </p>
           </div>
         </article>
         <article class="section-gourmand-choice__roller-slides">
           <div class="section-gourmand-choice__roller-slide">
             <img
+              width="300"
               src="img/img_section_gourman_choise/port-wine.png"
               alt="Pornt wine"
             />
@@ -78,7 +83,7 @@
               PORT WINE
             </h3>
             <p class="section-gourmand-choice__roller-slide-description">
-              Forfield wine
+              <em>Forfield wine</em>
             </p>
           </div>
         </article>
