add contact us to index html

--- a/contact_us.header-hero.partial.html
+++ b/contact_us.header-hero.partial.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>CONTACTS</title>
   </head>
   <body>
     <div class="contact">
@@ -12,7 +12,6 @@
         <span class="contact__breadcrumb">Home</span> >
         <ins><span class="contact__breadcrumb contact__breadcrumb--active"
           >Contact us</span></ins>
-        
       </nav>
     </div>
   </body>
