add css to about-us-our-winery-section

--- a/about_us.section-our_winery.partial.html
+++ b/about_us.section-our_winery.partial.html
@@ -6,72 +6,76 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="winery-description">
-      <h2 class="winery-description__title">~ our Winery ~</h2>
-      <p class="winery-description__subtitle">
-        Learn More About Our Tours and Tastings.
-      </p>
-      <p class="winery-description__content">
-        Visiting our winery and wine tasting is a wonderful way to experience
-        the best of what our winemaking craft has to offer.
-      </p>
-      <p class="winery-description__content">
-        Our winery offers a unique opportunity to experience the entire
-        winemaking process from vine to bottle. You can tour our vineyards,
-        witness the harvesting of the grapes, and learn about the different
-        stages of winemaking. With a guided tour, you will learn about the
-        history of our winery and the different types of wine we produce.
-      </p>
-      <p class="winery-description__content">
-        Our knowledgeable staff will guide you through the different varietals
-        and styles of our wines.
-      </p>
-    </div>
-    <div class="winery-features">
-      <div class="winery-features__card">
-        <img
-          width="100"
-          src="img/img_about_us-our_winery/craft_wines.svg"
-          alt="craft wines"
-        />
-        <p class="winery-features__title">Craft Wines</p>
-        <p class="winery-features__description">
-          Our wines are carefully crafted and aged to perfection.
-        </p>
+    <section class="about-us-our-winery">
+      <div class="about-us-our-winery__wrapper">
+        <div class="winery-description">
+          <h2 class="winery-description__title">~ our Winery ~</h2>
+          <p class="winery-description__subtitle">
+            Learn More About Our Tours and Tastings<span>.</span>
+          </p>
+          <p class="winery-description__content__bold">
+            Visiting our winery and wine tasting is a wonderful way to
+            experience the best of what our winemaking craft has to offer.
+          </p>
+          <p class="winery-description__content">
+            Our winery offers a unique opportunity to experience the entire
+            winemaking process from vine to bottle. You can tour our vineyards,
+            witness the harvesting of the grapes, and learn about the different
+            stages of winemaking. With a guided tour, you will learn about the
+            history of our winery and the different types of wine we produce.
+          </p>
+          <p class="winery-description__content">
+            Our knowledgeable staff will guide you through the different
+            varietals and styles of our wines.
+          </p>
+        </div>
+        <div class="winery-features">
+          <div class="winery-features__card">
+            <img
+              width="100"
+              src="img/img_about_us-our_winery/craft_wines.svg"
+              alt="craft wines"
+            />
+            <p class="winery-features__title">Craft Wines</p>
+            <p class="winery-features__description">
+              Our wines are carefully crafted and aged to perfection.
+            </p>
+          </div>
+          <div class="winery-features__card">
+            <img
+              width="100"
+              src="img/img_about_us-our_winery/the_best_wine_styles.svg"
+              alt="wine styles"
+            />
+            <p class="winery-features__title">The Best Wine Styles</p>
+            <p class="winery-features__description">
+              Our staff will tell you more about our wines.
+            </p>
+          </div>
+          <div class="winery-features__card">
+            <img
+              width="100"
+              src="img/img_about_us-our_winery/idea_for_ a_holiday.svg"
+              alt="idea for a holiday"
+            />
+            <p class="winery-features__title">Idea for a Holiday</p>
+            <p class="winery-features__description">
+              Pinot Noir is great for a family holiday or a romantic date.
+            </p>
+          </div>
+          <div class="winery-features__card">
+            <img
+              width="100"
+              src="img/img_about_us-our_winery/great_atmosphere.svg"
+              alt="Great Atmosphere"
+            />
+            <p class="winery-features__title">Great Atmosphere</p>
+            <p class="winery-features__description">
+              Tastings are held in our cellars, in a relaxing atmosphere.
+            </p>
+          </div>
+        </div>
       </div>
-      <div class="winery-features__card">
-        <img
-          width="100"
-          src="img/img_about_us-our_winery/the_best_wine_styles.svg"
-          alt="wine styles"
-        />
-        <p class="winery-features__title">The Best Wine Styles</p>
-        <p class="winery-features__description">
-          Our staff will tell you more about our wines.
-        </p>
-      </div>
-      <div class="winery-features__card">
-        <img
-          width="100"
-          src="img/img_about_us-our_winery/idea_for_ a_holiday.svg"
-          alt="idea for a holiday"
-        />
-        <p class="winery-features__title">Idea for a Holiday</p>
-        <p class="winery-features__description">
-          Pinot Noir is great for a family holiday or a romantic date.
-        </p>
-      </div>
-      <div class="winery-features__card">
-        <img
-          width="100"
-          src="img/img_about_us-our_winery/great_atmosphere.svg"
-          alt="Great Atmosphere"
-        />
-        <p class="winery-features__title">Great Atmosphere</p>
-        <p class="winery-features__description">
-          Tastings are held in our cellars, in a relaxing atmosphere.
-        </p>
-      </div>
-    </div>
+    </section>
   </body>
 </html>
