add dustribution scroll

--- a/contact_us.header-hero.partial.html
+++ b/contact_us.header-hero.partial.html
@@ -8,8 +8,7 @@
   <body>
     <div class="contact">
       <h1 class="contact__title">Contact Us</h1>
-      <nav class="contact__breadcrumbs">
-        <span class="contact__breadcrumb">Home</span> >
+      <nav class="contact__breadcrumbs">Home >
         <ins><span class="contact__breadcrumb contact__breadcrumb--active"
           >Contact us</span></ins>
       </nav>
