--- a/contact_us.section-distribution.partial.html
+++ b/contact_us.section-distribution.partial.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <section class="distribution">
-        <div class="distribution__header">
+        <div id="distribution-scroll" class="distribution__header">
             <h2 class="distribution__title">~ DISTRIBUTION ~</h2>
             <p class="distribution__subtitle">Our Authorized Distributors.</p>
             <p class="distribution__description">Find a seller in your city or state.</p>
