--- a/common.header-menu.partial.html
+++ b/common.header-menu.partial.html
@@ -17,7 +17,7 @@
                     </a>
                 </div>
                 <div class="header__menu-item">
-                    <a href="contact_us.section-distribution.partial.html" class="header__menu-link">
+                    <a href="#distribution-scroll" class="header__menu-link">
                         DISTRIBUTION
                     </a>
                 </div>
