added file about_us.header_page.html

--- a/about_us.header_page.html
+++ b/about_us.header_page.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <header>
+        <address class="header__address" data-hx-trigger="load" data-hx-swap="outerHTML"
+      data-hx-get="common.header-address.partial.html"></address>
+
+        <nav class="header__menu" data-hx-trigger="load" data-hx-swap="outerHTML"
+      data-hx-get="common.header-menu.partial.html"></nav>
         <div class="heading_text">
             <h2><em>About  Us</em></h2>
         </div>
