--- a/about_us.html
+++ b/about_us.html
@@ -18,12 +18,8 @@
   ></script>
 </head>
 <body>
-  <header>
-    <address class="header__address" data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="common.header-address.partial.html"></address>
-
-    <nav class="header__menu" data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="common.header-menu.partial.html"></nav>
-    <div class="about_us-header_page" data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="about_us.header_page.html">
-    </div>
+  <!-- Блок 1 Граматович Олександр -->
+  <header data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="about_us.header_page.html">
   </header>
     <!-- Блок 5 | Граматович Олександр-->
   <section 
