was styled header

--- a/about_us.header_page.html
+++ b/about_us.header_page.html
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <header>
+    <header class="header_block" >
         <address class="header__address" data-hx-trigger="load" data-hx-swap="outerHTML"
-      data-hx-get="common.header-address.partial.html"></address>
+            data-hx-get="common.header-address.partial.html"></address>
 
         <nav class="header__menu" data-hx-trigger="load" data-hx-swap="outerHTML"
-      data-hx-get="common.header-menu.partial.html"></nav>
-        <div class="heading_text">
-            <h2><em>About  Us</em></h2>
-        </div>
-        <div class="divider_component">
-            <br>
-        </div>
-        <div class="breading">
-            <p>Home> <u>About us</u></p>
+            data-hx-get="common.header-menu.partial.html"></nav>
+        <div class="main_text">
+            <div class="heading_text">
+                <h1> About Us</h1>
+            </div>
+            <div class="divider_component">
+                <br>
+            </div>
+            <div class="breading">
+                <p>Home> <u>About us</u></p>
+            </div>
         </div>
     </header>
 </body>
+
 </html>
