modified:   css/index.section-testimonials.partial new file:   img/img_section_testimonials/alice.png new file:   img/img_section_testimonials/amanda.png new file:   img/img_section_testimonials/will.png modified:   index.html modified:   index.section-testimonials.partial.html

--- a/index.section-testimonials.partial.html
+++ b/index.section-testimonials.partial.html
@@ -4,75 +4,115 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/index.css">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
     <div class="testimonials">
-      <h2 class="testimonials__title">
-        TESTIMONIALS - Our Lovely Clients About Us
-      </h2>
-      <h2 class="testimonials__text">Our Lovely Clients About Us</h2>
-      <p class="testimonials__intro">
-        Read the testimonials of our customers to find out why so many people
-        visit us.
-      </p>
-      <div class="roller">
-        <div class="roller__testimonial testimonial">
-          <p class="testimonial__customer">Alice Jackson</p>
-          <p class="testimonial__comment">
-            "The scenery was beautiful and it was the perfect way to spend an
-            afternoon. I would highly recommend visiting this winery!"
-          </p>
-          <p class="testimonial__date">MACH 25, 2023</p>
-        </div>
-
-        <div class="roller__testimonial testimonial">
-          <p class="testimonial__customer">Amanda Willson</p>
-          <p class="testimonial__comment">
-            "I'm so happy for the opening of the Pinot Noir Winery. They have a
-            tremendous collection of the finest wines. We had a really great
-            time there and will definitely come back soon."
-          </p>
-          <p class="testimonial__date">December 15, 2022</p>
-        </div>
-
-        <div class="roller__testimonial testimonial">
-          <p class="testimonial__customer">Will Smith</p>
-          <p class="testimonial__comment">
-            "Visiting the winery was an amazing experience! The staff were so
-            friendly and knowledgeable and the wine was delicious. I've already
-            recommended Pinot Noir to my friends."
-          </p>
-          <p class="testimonial__date">January 04, 2023</p>
-        </div>
+      <div class="testimonials-block">
+        <h2 class="testimonials-block__title">~ Testimonials ~</h2>
+        <p class="testimonials-block__text">Our Lovely Clients About Us.</p>
+        <p class="testimonials-block__subtitle">
+          Read the testimonials of our customers to find out why so many people
+          visit us.
+        </p>
       </div>
 
-      <div class="events">
-        <div class="events__item">
-          <img src="img/img_section_testimonials/events_1.jfif" alt="" />
-          <p class="events__item--text"><strong>•</strong>Wine Tasting 2021</p>
+      <!-- Testimonial carousel -->
+      <div
+        id="carouselExampleIndicators"
+        class="carousel slide"
+        data-bs-ride="carousel"
+      >
+        <div class="carousel-indicators">
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="0"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 1"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="1"
+            aria-label="Slide 2"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="2"
+            aria-label="Slide 3"
+          ></button>
         </div>
-        <div class="events__item">
-          <img src="img/img_section_testimonials/events_2.jfif" alt="" />
-          <p class="events__item--text">
-            <strong>•</strong>The Best Vineyard 2022
-          </p>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="carousel__testimonial testimonial">
+              <div><img  class="testimonial__img" src="img/img_section_testimonials/alice.png" alt=""></div>
+              <p class="testimonial__customer">Alice Jackson</p>
+              <p class="testimonial__comment">
+                "The scenery was beautiful and it was the perfect way to spend
+                an afternoon. I would highly recommend visiting this winery!"
+              </p>
+              <p class="testimonial__date">MACH 25, 2023</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="carousel__testimonial testimonial">
+              <div><img  class="testimonial__img" src="img/img_section_testimonials/amanda.png" alt=""></div>
+              <p class="testimonial__customer">Amanda Willson</p>
+              <p class="testimonial__comment">
+                "I'm so happy for the opening of the Pinot Noir Winery. They
+                have a tremendous collection of the finest wines. We had a
+                really great time there and will definitely come back soon."
+              </p>
+              <p class="testimonial__date">December 15, 2022</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="carousel__testimonial testimonial">
+              <div><img  class="testimonial__img" src="img/img_section_testimonials/will.png" alt=""></div>
+              <p class="testimonial__customer">Will Smith</p>
+              <p class="testimonial__comment">
+                "Visiting the winery was an amazing experience! The staff were
+                so friendly and knowledgeable and the wine was delicious. I've
+                already recommended Pinot Noir to my friends."
+              </p>
+              <p class="testimonial__date">January 04, 2023</p>
+            </div>
+          </div>
         </div>
-        <div class="events__item">
-          <img src="img/img_section_testimonials/events_3.jfif" alt="" />
-          <p class="events__item--text">
-            <strong>•</strong>Grapes Variety 2022
-          </p>
-        </div>
-        <div class="events__item">
-          <img src="img/img_section_testimonials/events_4.jfif" alt="" />
-          <p class="events__item--text"><strong>•</strong>Wine Festival 2022</p>
-        </div>
-        <div class="events__item">
-          <img src="img/img_section_testimonials/events_5.jfif" alt="" />
-          <p class="events__item--text"><strong>•</strong>Wine Cellar 2023</p>
-        </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
     </div>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
