changes :   -   css/index.section-testimonials.partial.css   -   index.section-testimonials.partial.html

--- a/index.section-testimonials.partial.html
+++ b/index.section-testimonials.partial.html
@@ -54,7 +54,13 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <div class="carousel__testimonial testimonial">
-              <div><img  class="testimonial__img" src="img/img_section_testimonials/alice.png" alt=""></div>
+              <div>
+                <img
+                  class="testimonial__img"
+                  src="img/img_section_testimonials/alice.png"
+                  alt=""
+                />
+              </div>
               <p class="testimonial__customer">Alice Jackson</p>
               <p class="testimonial__comment">
                 "The scenery was beautiful and it was the perfect way to spend
@@ -65,7 +71,13 @@
           </div>
           <div class="carousel-item">
             <div class="carousel__testimonial testimonial">
-              <div><img  class="testimonial__img" src="img/img_section_testimonials/amanda.png" alt=""></div>
+              <div>
+                <img
+                  class="testimonial__img"
+                  src="img/img_section_testimonials/amanda.png"
+                  alt=""
+                />
+              </div>
               <p class="testimonial__customer">Amanda Willson</p>
               <p class="testimonial__comment">
                 "I'm so happy for the opening of the Pinot Noir Winery. They
@@ -77,7 +89,13 @@
           </div>
           <div class="carousel-item">
             <div class="carousel__testimonial testimonial">
-              <div><img  class="testimonial__img" src="img/img_section_testimonials/will.png" alt=""></div>
+              <div>
+                <img
+                  class="testimonial__img"
+                  src="img/img_section_testimonials/will.png"
+                  alt=""
+                />
+              </div>
               <p class="testimonial__customer">Will Smith</p>
               <p class="testimonial__comment">
                 "Visiting the winery was an amazing experience! The staff were
@@ -106,6 +124,42 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
+      </div>
+    </div>
+
+    <!-- Out events  -->
+    <div class="events">
+      <div class="container">
+        <div class="events__row">
+          <div class="events__item">
+            <img class="events__item--img" src="img/img_section_testimonials/events_1.jfif" alt="" />
+            <p class="events__item--text">
+              <strong>•</strong> Wine Tasting 2021
+            </p>
+          </div>
+          <div class="events__item">
+            <img class="events__item--img" src="img/img_section_testimonials/events_2.jfif" alt="" />
+            <p class="events__item--text">
+              <strong>•</strong> The Best Vineyard 2022
+            </p>
+          </div>
+          <div class="events__item">
+            <img class="events__item--img" src="img/img_section_testimonials/events_3.jfif" alt="" />
+            <p class="events__item--text">
+              <strong>•</strong> Grapes Variety 2022
+            </p>
+          </div>
+          <div class="events__item">
+            <img class="events__item--img" src="img/img_section_testimonials/events_4.jfif" alt="" />
+            <p class="events__item--text">
+              <strong>•</strong> Wine Festival 2022
+            </p>
+          </div>
+          <div class="events__item">
+            <img class="events__item--img" src="img/img_section_testimonials/events_5.jfif" alt="" />
+            <p class="events__item--text"><strong>•</strong> Wine Cellar 2023</p>
+          </div>
+        </div>
       </div>
     </div>
 
