Added CSS for index.section-about-us and index.section-gourmand-choice

--- a/contact_us.section-visit_us.partial.html
+++ b/contact_us.section-visit_us.partial.html
@@ -60,11 +60,11 @@
           action="https://formspree.io/f/xayrllea"
           method="post"
         >
-          <input type="text" required name="fullname" />
-          <input type="tel" required name="phonenumber" />
-          <input type="email" required name="email" />
-          <input type="text" name="message" />
-          <input type="submit" value="Send" />
+          <input class="section-contact-us-visit-us_form-input" type="text" required name="fullname" placeholder="Enter your fullname*">
+          <input class="section-contact-us-visit-us_form-input" type="tel" required name="phonenumber" placeholder="Enter your phone number*">
+          <input class="section-contact-us-visit-us_form-input" type="email" required name="email" placeholder="Enter your e-mail*">
+          <textarea class="section-contact-us-visit-us_form-textarea" type="text" name="message" rows="5" cols="20" placeholder="Type your maessage"></textarea>
+          <input class="section-contact-us-visit-us_form-input" type="submit" value="Send">
         </form>
         <p class="section-contact-us-visit-us__text">
           It is strongly recommended that you book in advance if you wish to
