--- a/index.section-about-us.partial.html
+++ b/index.section-about-us.partial.html
@@ -7,12 +7,15 @@
   </head>
   <body>
     <section class="section-about-us">
-      <div class="section-about-us__contaiber">
+      <div class="section-about-us__container">
         <div class="section-about-us__content">
+          <div class="section-about-us__content-title">
           <h2 class="section-about-us__title">~ ABOUT US ~</h2>
           <p class="section-about-us__description">
             Wine is Poetry in a Bottle. Discover Our <em>Wines</em>.
           </p>
+        </div>
+        <div class="section-about-us__content-text">
           <p class="section-about-us__text">
             Our artisan winery located in Austin, Texas is committed to
             producing delicious, interesting, well-balanced wines with the
@@ -21,25 +24,41 @@
             terroir expressive vineyards.
           </p>
         </div>
-        <div class="section-about-us__info">
-          <p class="section-about-us__fact"><em>15.000</p></em>
-          <p class="section-about-us__fact-label">Hectares of land;</p>
-          <p class="section-about-us__fact"><em>897+</p></em>
-          <p class="section-about-us__fact-label">Employees;</p>
-          <p class="section-about-us__fact"><em>1.500K</p></em>
-          <p class="section-about-us__fact-label">Bottles produced;</p>
-          <p class="section-about-us__fact"><em>345 +</p></em>
-          <p class="section-about-us__fact-label">Tours per year;</p>
-          <p class="section-about-us__fact"><em>9.000K</p></em>
-          <p class="section-about-us__fact-label">Visitors per year.</p>
         </div>
-      </div>
-      <div class="section-about-us__video">
-        <img
-        width="500"
-          src="img/img_section_about_us/video-presentation.jpg"
-          alt="Video Presentation"
-        />
+        <div class="section-about-us__info">
+          <div class="section-about-us__info-table">
+            <p class="section-about-us__fact">15.000</p>
+            <hr />
+            <p class="section-about-us__fact-label">Hectares of land;</p>
+          </div>
+          <div class="section-about-us__info-table">
+            <p class="section-about-us__fact">897+</p>
+            <hr />
+            <p class="section-about-us__fact-label">Employees;</p>
+          </div>
+          <div class="section-about-us__info-table">
+            <p class="section-about-us__fact">1.500K</p>
+            <hr />
+            <p class="section-about-us__fact-label">Bottles produced;</p>
+          </div>
+          <div class="section-about-us__info-table">
+            <p class="section-about-us__fact">345 +</p>
+            <hr />
+            <p class="section-about-us__fact-label">Tours per year;</p>
+          </div>
+          <div class="section-about-us__info-table">
+            <p class="section-about-us__fact">9.000K</p>
+            <hr />
+            <p class="section-about-us__fact-label">Visitors per year.</p>
+          </div>
+        </div>
+        <div class="section-about-us_video">
+          <img
+            width="500"
+            src="img/img_section_about_us/video-presentation.jpg"
+            alt="Video Presentation"
+          />
+        </div>
       </div>
     </section>
   </body>
