--- a/index.section-gourman-choice.partial.html
+++ b/index.section-gourman-choice.partial.html
@@ -25,11 +25,12 @@
         </p>
       </div>
       <div class="section-gourmand-choice__roller">
-        <img
-          width="30"
-          src="img/img_section_gourman_choise/arrow_left.svg"
-          alt="Arrow left"
-        />
+        <div class="section-gourmand-choice__arrow">
+          <img
+            src="img/img_section_gourman_choise/arrow_left.svg"
+            alt="Arrow left"
+          />
+        </div>
         <article class="section-gourmand-choice__roller-slides">
           <div class="section-gourmand-choice__roller-slide">
             <img
@@ -40,12 +41,16 @@
             <p class="section-gourmand-choice__roller-slide-description">
               <em>Dessert wine</em>
             </p>
+            <div class="section-gourmand-choice__button">
+              <a href="#" class="section-gourmand-choice__roller-button"
+                >Tasting</a
+              >
+            </div>
           </div>
         </article>
         <article class="section-gourmand-choice__roller-slides">
           <div class="section-gourmand-choice__roller-slide">
             <img
-              width="300"
               src="img/img_section_gourman_choise/grenache-rose-wine.png"
               alt="Grenache rose wine"
             />
@@ -55,12 +60,16 @@
             <p class="section-gourmand-choice__roller-slide-description">
               <em>Vintage wine(2000)</em>
             </p>
+            <div class="section-gourmand-choice__button">
+              <a href="#" class="section-gourmand-choice__roller-button"
+                >Tasting</a
+              >
+            </div>
           </div>
         </article>
         <article class="section-gourmand-choice__roller-slides">
           <div class="section-gourmand-choice__roller-slide">
             <img
-              width="300"
               src="img/img_section_gourman_choise/pinot-noir-wine.png"
               alt="Pinot noir wine"
             />
@@ -70,12 +79,16 @@
             <p class="section-gourmand-choice__roller-slide-description">
               <em>Vintage wine(1999)</em>
             </p>
+            <div class="section-gourmand-choice__button">
+              <a href="#" class="section-gourmand-choice__roller-button"
+                >Tasting</a
+              >
+            </div>
           </div>
         </article>
         <article class="section-gourmand-choice__roller-slides">
           <div class="section-gourmand-choice__roller-slide">
             <img
-              width="300"
               src="img/img_section_gourman_choise/port-wine.png"
               alt="Pornt wine"
             />
@@ -85,13 +98,19 @@
             <p class="section-gourmand-choice__roller-slide-description">
               <em>Forfield wine</em>
             </p>
+            <div class="section-gourmand-choice__button">
+              <a href="#" class="section-gourmand-choice__roller-button"
+                >Tasting</a
+              >
+            </div>
           </div>
         </article>
-        <img
-          width="30"
-          src="img/img_section_gourman_choise/arrow_right.svg"
-          alt="Arrow right"
-        />
+        <div class="section-gourmand-choice__arrow">
+          <img
+            src="img/img_section_gourman_choise/arrow_right.svg"
+            alt="Arrow right"
+          />
+        </div>
       </div>
     </section>
   </body>
