--- a/index.section-our-vineyards.partial.html
+++ b/index.section-our-vineyards.partial.html
@@ -10,9 +10,9 @@
       <div class="vineyards__content">
         <h2 class="vineyards__title">~ OUR VINEYARDS ~</h2>
         <p class="vineyards__description">
-          Our Vineyards Grow the Highest-Quality Grapes.
+          Our Vineyards Grow the <em>Highest</em>-<em>Quality</em> Grapes.
         </p>
-        <p class="vineyards__text">
+        <p class="vineyards__text-title">
           What really matters to us is the quality of the grapes we use for our
           wines. We believe in sustainable grapes growing.
         </p>
