uploaded the images of team

--- a/about_us.header_page.html
+++ b/about_us.header_page.html
@@ -22,7 +22,7 @@
                 <br>
             </div>
             <div class="breading">
-                <p>Home> <u>About us</u></p>
+                <p> <span style="    color: rgba(255, 255, 255, 0.69);">Home></span> <u>About us</u></p>
             </div>
         </div>
     </header>
